Sync upto Oct 26, 2024  Merge pull request #36 from medblocks/issue_9_code_smells