@@ -10,22 +10,29 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.medblocks.openfhir.fc.FhirConnectConst.OPENEHR_TYPE_NONE;
+import static com.medblocks.openfhir.util.OpenFhirStringUtils.RECURRING_SYNTAX;
 
 @Component
 public class OpenEhrRmWorker {
 
-    private OpenFhirStringUtils openFhirStringUtils;
+    private final OpenFhirStringUtils openFhirStringUtils;
 
     @Autowired
     public OpenEhrRmWorker(OpenFhirStringUtils openFhirStringUtils) {
         this.openFhirStringUtils = openFhirStringUtils;
     }
 
-    public void fixFlatWithOccurrences(final List<FhirToOpenEhrHelper> flattened, final WebTemplate webTemplate) {
-        for (final FhirToOpenEhrHelper fhirToOpenEhrHelper : flattened) {
+    /**
+     * Modifies simplified flat path with occurrences, i.e. patient.person becomes patient/person[n]
+     * at the same time, it sets openEHR type as it finds all possible ones on the template definition
+     *
+     * @param helpers     created FhirToOpenEhr helpers
+     * @param webTemplate openEHR web template
+     */
+    public void fixFlatWithOccurrences(final List<FhirToOpenEhrHelper> helpers, final WebTemplate webTemplate) {
+        for (final FhirToOpenEhrHelper fhirToOpenEhrHelper : helpers) {
             final String openEhrKey = fhirToOpenEhrHelper.getOpenEhrPath();
 
             final Set<String> forcedTypes = openFhirStringUtils.getPossibleRmTypeValue(fhirToOpenEhrHelper.getOpenEhrType());
@@ -37,6 +44,8 @@ public class OpenEhrRmWorker {
             final WebTemplateNode tree = webTemplate.getTree();
 
             final StringJoiner constructing = new StringJoiner("/");
+
+            // walk through all web template nodes and enrich them with types and occurrence indexes
             walkThroughNodes(tree.getChildren(), String.join("/", split), constructing, forcedTypes, fhirToOpenEhrHelper);
 
 
@@ -44,9 +53,9 @@ public class OpenEhrRmWorker {
 
             // we compare so that we can see if if was found within the template; if not, we don't want for it to end up in the flat json
             final String initialOpenEhrPathWithProperTreeId = tree.getId() + "/" + flat.substring(flat.indexOf("/") + 1);
-            if(fhirToOpenEhrHelper.getOpenEhrPath().length() < initialOpenEhrPathWithProperTreeId.length()) {
+            if (fhirToOpenEhrHelper.getOpenEhrPath().length() < initialOpenEhrPathWithProperTreeId.length()) {
                 // means it didn't find it fully.. so it probably doesn't exist
-                if(!FhirConnectConst.DV_MULTIMEDIA.equals(fhirToOpenEhrHelper.getOpenEhrType())) { // multimedia and its 'content' is a tad bit special...
+                if (!FhirConnectConst.DV_MULTIMEDIA.equals(fhirToOpenEhrHelper.getOpenEhrType())) { // multimedia and its 'content' is a tad bit special...
                     fhirToOpenEhrHelper.setOpenEhrType(OPENEHR_TYPE_NONE);
                 }
             }
@@ -57,6 +66,15 @@ public class OpenEhrRmWorker {
         }
     }
 
+    /**
+     * Walks through web template nodes and sets recurring indexes on simplified flat path; at the same time, it adds
+     * openEHR type
+     *
+     * @param webTemplateNodes web template nodes as they exist on the openEHR template
+     * @param path             part of openEHR path that's being searched for within the webTemplateNodes
+     * @param constructing     string being constructed from the path elements, however here already including recurring indexes notation, i.e. medikationseintrag[n]
+     * @param forcedTypes      if openEHR type is being "forced" by a fhir connect mapping definition, this is the one we'll try to find within the template
+     */
     public void walkThroughNodes(final List<WebTemplateNode> webTemplateNodes, final String path, final StringJoiner constructing, final Set<String> forcedTypes, final FhirToOpenEhrHelper fhirToOpenEhrHelper) {
         if (StringUtils.isBlank(path)) {
             // everything has been resolved
@@ -70,7 +88,7 @@ public class OpenEhrRmWorker {
             // we don't bother with this, can't be multiple occurrences
             constructing.add(pathToFind);
             remainingPaths = Arrays.asList(splitOpenEhrPath).subList(1, splitOpenEhrPath.length);
-            walkThroughNodes(webTemplateNodes, remainingPaths.stream().collect(Collectors.joining("/")),
+            walkThroughNodes(webTemplateNodes, String.join("/", remainingPaths),
                     constructing, forcedTypes, fhirToOpenEhrHelper);
             return;
         }
@@ -90,14 +108,14 @@ public class OpenEhrRmWorker {
         remainingPaths = Arrays.asList(splitOpenEhrPath).subList(1, splitOpenEhrPath.length);
         if (findingTheOne.isMulti()) {
             // is multiple occurrences
-            constructing.add(pathToFind + "[n]");
+            constructing.add(pathToFind + RECURRING_SYNTAX);
             fhirToOpenEhrHelper.setOpenEhrType(forcedTypes == null ? findingTheOne.getRmType() : getCorrectOpenEhrType(forcedTypes, findingTheOne));
         } else {
             constructing.add(pathToFind);
             fhirToOpenEhrHelper.setOpenEhrType(forcedTypes == null ? findingTheOne.getRmType() : getCorrectOpenEhrType(forcedTypes, findingTheOne));
         }
 
-        walkThroughNodes(findingTheOne.getChildren(), remainingPaths.stream().collect(Collectors.joining("/")),
+        walkThroughNodes(findingTheOne.getChildren(), String.join("/", remainingPaths),
                 constructing, forcedTypes, fhirToOpenEhrHelper);
     }
 
@@ -114,7 +132,7 @@ public class OpenEhrRmWorker {
                     .orElse(null);
         }
         final List<String> matchedByType = forcedTypes.stream()
-                .filter(ft -> ft.equals(relevantTemplateNode.getRmType())).collect(Collectors.toList());
+                .filter(ft -> ft.equals(relevantTemplateNode.getRmType())).toList();
         return matchedByType.isEmpty() ? new ArrayList<>(forcedTypes).get(0) : matchedByType.get(0); // is this ok??
     }
 }
